...
                android:orientation="horizontal"
                android:layout_marginTop="200dp"
                app:layout_constraintStart_toStartOf="@id/profile_pic"
                app:layout_constraintTop_toTopOf="@id/profile_pic">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LOGIN" />

            </LinearLayout>

...
