<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_14sdp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_40sdp"
            android:paddingLeft="@dimen/_40sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Modify Step Counter Target"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/title">


                <EditText
                    android:id="@+id/totalSteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:ems="5"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="2500"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@id/title"/>

                <View
                    android:layout_width="5dp"
                    android:layout_height="25dp" />

                <Button
                    android:id="@+id/recalculateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_11sdp"
                    android:text="SET" />

                <View
                    android:layout_width="5dp"
                    android:layout_height="25dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/headerCard"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="21dp"
        app:cardBackgroundColor="@color/connect_respeck_background"
        app:cardCornerRadius="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8sdp"
            android:src="@drawable/walk_icon">

        </androidx.appcompat.widget.AppCompatImageView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>