...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <Switch
                android:id="@+id/power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchMinWidth="46dp"
                android:checked="true"
                android:theme="@style/ThemeOverlay.MaterialComponents.Light"
                app:layout_constraintBottom_toBottomOf="parent"
...
